hero image on small screens issue v10

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,8 +1,8 @@
-#header {
+/* #header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+} */
 
 .hero {
     display: flex;
@@ -10,7 +10,7 @@
     justify-content: space-between;
     height: 100vh;
     padding: 40px;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     color: white;
     background-image: url("../img/CV.jpg");
     background-position: center;
@@ -60,7 +60,7 @@
     }
 
     .hero {
-        display: flex;
+        /* display: flex;
         flex-direction: column;
         justify-content: space-between;
         height: 100%;
@@ -71,12 +71,15 @@
         background-image: url("../img/CV.jpg");
         background-position: center center;
         background-repeat: no-repeat;
-        background-size: cover;
-        
+        background-size: cover; */
+        min-height: 100%;
+        position: relative;
+        overflow: hidden;
+
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
-        
+
         background-attachment: fixed;
     }
 
